# whatsapp-sender

./: .gitignore  PyWhatKit_DB.txt  README.MD  pyproject.toml  requirements.txt  validatios_ui.py  whatsapp-sender.db
src/: app.py  controlsFlet.py  database.py  paginated_dt.py  sample.xlsx  scripts_sql.py  templates_schema.py  utils.py
src/database/: conection.py  scripts_sql.py  seed_templates.py
src/database/repositories/: template_reporitory.py
src/pages/: constants_style.py  handle_errors.py  utils.py
src/pages/main_page/: app_logic.py  app_ui.py  validations_ui.py  validatios_ui.py
src/schemas/: templates_schema.py
src/service_schedule/: main.py
src/service_whatsapp/: PyWhatKit_DB.txt  handle_errors.py  main.py
